-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.2, 5.8
-
Windows 10, Angle, Desktop GL
-
694702e09d9b17d91db282784f009178cfb1059b
Attached example should reproduce this issue. Just run it and it shows previous frame.
- relates to
-
QTBUG-54241 Render-to-texture widgets' closing do not update the containing window
-
- Closed
-
| For Gerrit Dashboard: QTBUG-56534 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 173954,3 | Mark the entire widget dirty when changing flush paths | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |